    Stephan Sürken. This is now default but could disabled in the
    apt-dater-host.conf file.
    (Closes Debian Bug#565930)
  * Fix German localisation typos.
    (Closes SF Bug#2941509 by Micha vor dem Berge)
  * Fix Debian hosts become 'Unknown' if they hadn't a stock Debian kernel installed.
    (Closes SF Bug#2933741 by alma@arwin.hu)

 -- 

apt-dater (0.8.1) unstable; urgency=low

  * Add hooks on connect/install/refresh/upgrade.
  * Run external commands via shell script helper.
  * Add host history data to XML reports.
  * Add -n command line argument (report w/o refresh).
  * Extended tagging by host flags.
  * Fixes:
    - upgrade & install on filtered categories
    - pass --as-needed to ld
    - minor ui glitches (no more flicker)
  * Add Italian translation - contributed by
    Milo Casagrande <milo@ubuntu.com>.
  * Drop DefaultUser and DefaultPort configuration. If a host has no
    username or port given, let ssh select the right one.
    (Closes Debian Bug#559366 by "chrysn")
  * Update adproto to version 0.5.

 -- Andre Ellguth <ellguth@ibh.de>  Fri, 18 Dec 2009 13:39:52 +0100

apt-dater (0.8.0) unstable; urgency=low

  * Add gettext support.
  * Hosts can now be tagged (like in mutt).
  * Support mutt like navigation.
  * Add uname fields to apt-dater-host proto.
  * Apply 01-aptitude_safe-upgrade.dpatch from Debian.
  * Improve auto refresh feature.
  * History feature (record ssh session with script).
  * Remove "Status file missing" category ("Unkown" is used instead).
  * apt-dater-host (debian/yum): optional cleanup after install/upgrade
  * apt-dater-host protocol 0.3:
    - broken packages support
  * Debug feature (adds some assertions to the code).
  * Fixes:
    - KERNELINFO status flag on Debian Lenny
    - documentation
    - set FD_CLOEXEC on lockfiles
    - don't use hardcoded screen dump filenames
    - reduce CPU cycles use by refreshing the screen more than needed